--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.5.0",
     "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "^7.13.0",
