--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon src/index.js",
     "build": "sucrase ./src -d ./dist --transforms imports"
   },
   "dependencies": {
